--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
+
+@theme {
+  --font-primary: "Roboto";
+  --color-primary: #749bc2;
+  --color-secondary: #91c8e4;
+}
